--- a/netflix-clone/src/screens/LoginScreen.css
+++ b/netflix-clone/src/screens/LoginScreen.css
@@ -41,9 +41,12 @@
     top: 30%;
     margin-left: auto;
     margin-right: auto;
+    text-align: center;
     z-index: 1;
     color: #fff;
     padding: 20px;
+    left: 0;
+    right: 0;
 }
 
 .loginScreen__body > h1{
